KULRICE-8910  button spacing fix on home page

--- a/rice-framework/krad-sampleapp/src/main/webapp/css/kradSampleApp.css
+++ b/rice-framework/krad-sampleapp/src/main/webapp/css/kradSampleApp.css
@@ -102,6 +102,7 @@
     border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
     filter: progid:dximagetransform.microsoft.gradient(startColorstr = '#fffbb450', endColorstr = '#fff89406', GradientType = 0);
     filter: progid:dximagetransform.microsoft.gradient(enabled = false);
+    margin-top: 20px;
 }
 
 .demo-tryItButton:hover, .demo-tryItButton:focus {
